--- a/newfile1.html
+++ b/newfile1.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Container (Bootstrap Concept 1: Layout using Container) -->
     <div class="container my-5">
-      <h1 class="text-center mb-4">🌱 My Plant Gallery 🌱</h1>
+      <h1 class="text-center mb-4">My Fav Cars</h1>
 
       <!-- Row and Columns (Bootstrap Concept 2: Grid System) -->
       <div class="row">
@@ -24,8 +24,8 @@
             alt="Aloe Vera"
             style="width: 300px; height: 300px; object-fit: cover"
           />
-          <h5 class="mt-3">Aloe Vera</h5>
-          <p>Known for its healing properties and easy care!</p>
+          <h5 class="mt-3">Gtr35</h5>
+          <p>The Nissan GT-R R35 is a fast, powerful Japanese sports car nicknamed “Godzilla.”</p>
         </div>
 
         <!-- Second Plant -->
@@ -36,8 +36,8 @@
             alt="Snake Plant"
             style="width: 200px; height: 200px; object-fit: cover"
           />
-          <h5 class="mt-3">Snake Plant</h5>
-          <p>Hardy and great for indoor air purification.</p>
+          <h5 class="mt-3">BMW</h5>
+          <p>BMW is a German car brand known for making luxury, high-performance cars that focus on driving pleasure and style.</p>
         </div>
 
         <!-- Third Plant -->
@@ -48,8 +48,8 @@
             alt="Peace Lily"
             style="width: 200px; height: 200px; object-fit: cover"
           />
-          <h5 class="mt-3">Peace Lily</h5>
-          <p>Elegant flowers and thrives in shade!</p>
+          <h5 class="mt-3">GT3RS</h5>
+          <p>The Porsche 911 GT3 RS is a track-focused sports car built for extreme performance, with a powerful engine, lightweight design, and advanced aerodynamics.</p>
         </div>
       </div>
 
