--- a/newfile1.html
+++ b/newfile1.html
@@ -48,7 +48,7 @@
 
       <!-- Button (Bootstrap Concept 3: Components) -->
       <div class="text-center mt-4">
-        <button class="btn btn-success">See More Plants</button>
+        <button class="btn btn-success">See More Cars</button>
       </div>
     </div>
   </body>
