--- a/newfile1.html
+++ b/newfile1.html
@@ -57,7 +57,20 @@
         </div>
       </div>
 
-      <!-- Button (Bootstrap Concept 3: Components) -->
+        <!-- Fourth Car (Placeholder) -->
+        <div class="col-md-6 text-center mb-4">
+          <img
+            src="https://cdn11.bigcommerce.com/s-0d425/images/stencil/2048x2048/products/933/3729/user13639_pic32349_1304115571__05053.1407506789.jpg?c=2"
+            class="img-fluid rounded"
+            alt="text"
+            style="width: 200px; height: 200px; object-fit: cover"
+          />
+          <h5 class="mt-3">370z</h5>
+          <p>The Nissan 370Z is a sleek, two-seat sports car with a 3.7L V6 engine, known for its sharp handling, strong performance, and classic Z-car styling.</p>
+        </div>
+      </div>
+
+      <!-- Button -->
       <div class="text-center mt-4">
         <button class="btn btn-success">See More Cars</button>
       </div>
