--- a/FinaProject/index.html
+++ b/FinaProject/index.html
@@ -76,4 +76,91 @@
   </body>
 </html>
 
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Top Cars & Features</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="#">Car Showcase 🚗</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#">Cars</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container py-5">
+    <h1 class="text-center mb-5">Featured Cars & Their Best Features</h1>
+
+    <div class="row g-4">
+
+      <!-- 370Z Card -->
+      <div class="col-md-4">
+        <div class="card h-100">
+          <div class="card-body text-center">
+            <h3 class="card-title">Nissan 370Z 🟡</h3>
+            <ul class="list-group list-group-flush text-start mt-3">
+              <li class="list-group-item">🧭 3.7L V6 Engine – 332 HP</li>
+              <li class="list-group-item">⚙️ 6-Speed Manual Transmission</li>
+              <li class="list-group-item">🚦 Rear-Wheel Drive</li>
+              <li class="list-group-item">🔊 Bose® Premium Audio</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- M4 Card -->
+      <div class="col-md-4">
+        <div class="card h-100">
+          <div class="card-body text-center">
+            <h3 class="card-title">BMW M4 🟢</h3>
+            <ul class="list-group list-group-flush text-start mt-3">
+              <li class="list-group-item">🏁 3.0L Twin-Turbo I6 – 503 HP</li>
+              <li class="list-group-item">⚙️ 8-Speed M Steptronic</li>
+              <li class="list-group-item">🛞 Adaptive M Suspension</li>
+              <li class="list-group-item">💺 M Sport Seats</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- GT-R R35 Card -->
+      <div class="col-md-4">
+        <div class="card h-100">
+          <div class="card-body text-center">
+            <h3 class="card-title">Nissan GT-R R35 🔵</h3>
+            <ul class="list-group list-group-flush text-start mt-3">
+              <li class="list-group-item">🚀 3.8L Twin-Turbo V6 – 565 HP</li>
+              <li class="list-group-item">⚙️ Dual-Clutch 6-Speed Transmission</li>
+              <li class="list-group-item">🧲 All-Wheel Drive</li>
+              <li class="list-group-item">🏎️ Launch Control System</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="text-center mt-5">
+      <a href="index.html" class="btn btn-outline-dark">← Back to Home</a>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
+
  
