--- a/FinaProject/moreCars.html
+++ b/FinaProject/moreCars.html
@@ -27,13 +27,15 @@
       <img
         src="https://infamousaero.com/cdn/shop/files/DSC03326-Edit_1434x1068.jpg?v=1692796858"
         class="img-fluid rounded"
+         style="width: 100%; height: 250px; object-fit: cover"
       <!-- Toyota Supra -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body text-center">
             <h3 class="card-title">Toyota Supra 🔴</h3>
             <ul class="list-group list-group-flush text-start mt-3">
-              <li class="list-group-item">🧠 3.0L Turbo I6 – 382 HP</li>
+              
+             <li class="list-group-item">🧠 3.0L Turbo I6 – 382 HP</li>
               <li class="list-group-item">⚙️ 8-Speed Auto / Manual</li>
               <li class="list-group-item">💨 0–60 in 3.9 seconds</li>
               <li class="list-group-item">🎯 Rear-Wheel Drive</li>
@@ -46,6 +48,7 @@
       <img
         src="https://i.pinimg.com/originals/e4/fd/57/e4fd5785f187881d95ac91100fa79469.jpg"
         class="img-fluid rounded"
+         style="width: 100%; height: 250px; object-fit: cover"
       <!-- Camaro ZL1 -->
       <div class="col-md-4">
         <div class="card h-100">
@@ -64,6 +67,7 @@
      
       <img
         src="https://www.carid.com/images/inspiration/audi/s5/47/1.jpg"
+         style="width: 100%; height: 250px; object-fit: cover"
         class="img-fluid rounded"
       <!-- Audi RS5 -->
       <div class="col-md-4">
