--- a/FinaProject/index.html
+++ b/FinaProject/index.html
@@ -66,6 +66,14 @@
          <li><a href="moreCars.html">More Cars</a></li>
         </ul>
       </nav>
+<nav class="navbar">
+        <ul>
+         <li><a href="locations.html">Car Meet locations</a></li>
+        </ul>
+      </nav>
+
+
+
 
     
 
