--- a/FinaProject/moreCars.html
+++ b/FinaProject/moreCars.html
@@ -27,7 +27,8 @@
       <img
         src="https://infamousaero.com/cdn/shop/files/DSC03326-Edit_1434x1068.jpg?v=1692796858"
         class="img-fluid rounded"
-         <!-- Toyota Supra -->
+         style="width: 100%; height: 250px; object-fit: cover"
+      <!-- Toyota Supra -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body text-center">
@@ -47,7 +48,8 @@
       <img
         src="https://i.pinimg.com/originals/e4/fd/57/e4fd5785f187881d95ac91100fa79469.jpg"
         class="img-fluid rounded"
-          <!-- Camaro ZL1 -->
+         style="width: 100%; height: 250px; object-fit: cover"
+      <!-- Camaro ZL1 -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body text-center">
@@ -65,7 +67,8 @@
      
       <img
         src="https://www.carid.com/images/inspiration/audi/s5/47/1.jpg"
-         class="img-fluid rounded"
+         style="width: 100%; height: 250px; object-fit: cover"
+        class="img-fluid rounded"
       <!-- Audi RS5 -->
       <div class="col-md-4">
         <div class="card h-100">
@@ -83,11 +86,16 @@
 
     </div>
 
-    <div class="text-center mt-5">
-      <a href="index.html" class="btn btn-outline-dark">← Back to Previous Cars</a>
-    </div>
-  </div>
+    <nav class="navbar">
+      <ul>
+       <li><a href="locations.html">Car Meet locations</a></li>
+      </ul>
+    </nav>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
+
